--- a/index.html
+++ b/index.html
@@ -2,86 +2,7 @@
 <html>
 <head>
   <title>Smart Clock</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-      background: #f0f0f0;
-      color: #000;
-      transition: background 0.5s, color 0.5s;
-    }
-
-    .container {
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      max-width: 500px;
-      margin: auto;
-      padding: 30px;
-      position: relative;
-    }
-
-    #themeToggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      padding: 6px 12px;
-      font-size: 14px;
-      background-color: #ddd;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .dark-mode {
-      background: #121212;
-      color: #ffffff;
-    }
-
-    .dark-mode .container {
-      background: #1e1e1e;
-      color: #ffffff;
-      box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
-    }
-
-    .dark-mode #themeToggle {
-      background-color: #333;
-      color: #fff;
-    }
-
-    button {
-      margin: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .tab {
-      display: none;
-      margin-top: 20px;
-      font-size: 24px;
-    }
-
-    #clock {
-      font-size: 48px;
-      font-weight: bold;
-    }
-
-    #day, #date {
-      font-size: 20px;
-      margin-top: 5px;
-    }
-
-    input[type="time"],
-    input[type="number"] {
-      padding: 8px;
-      font-size: 16px;
-      border-radius: 5px;
-      margin-top: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -124,122 +45,11 @@
     </div>
   </div>
 
-  <!-- 🔊 Audio Alert -->
   <audio id="beep" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
-
-  <script>
-    function showTab(tabId) {
-      document.querySelectorAll('.tab').forEach(tab => tab.style.display = 'none');
-      document.getElementById(tabId).style.display = 'block';
-    }
-
-    setInterval(() => {
-      const now = new Date();
-      const time = now.toLocaleTimeString();
-      const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-      const months = ["January", "February", "March", "April", "May", "June",
-                      "July", "August", "September", "October", "November", "December"];
-
-      const day = days[now.getDay()];
-      const date = `${now.getDate()} ${months[now.getMonth()]} ${now.getFullYear()}`;
-
-      document.getElementById("clock").textContent = time;
-      document.getElementById("day").textContent = day;
-      document.getElementById("date").textContent = date;
-
-      checkAlarm(now);
-    }, 1000);
-
-    // Alarm
-    let alarmTime = null;
-    function setAlarm() {
-      alarmTime = document.getElementById("alarmTime").value;
-      document.getElementById("alarmStatus").textContent = "Alarm set for " + alarmTime;
-    }
-
-    function checkAlarm(current) {
-      if (!alarmTime) return;
-      const now = current.toTimeString().substring(0, 5);
-      if (now === alarmTime) {
-        playBeep();
-        alert("⏰ Alarm Ringing!");
-        alarmTime = null;
-        document.getElementById("alarmStatus").textContent = "";
-      }
-    }
-
-    // Stopwatch
-    let swInterval, swSeconds = 0;
-    function updateStopwatch() {
-      let hrs = Math.floor(swSeconds / 3600);
-      let mins = Math.floor((swSeconds % 3600) / 60);
-      let secs = swSeconds % 60;
-      document.getElementById("stopwatch").textContent =
-        `${hrs.toString().padStart(2, '0')}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
-    }
-    function startStopwatch() {
-      if (swInterval) return;
-      swInterval = setInterval(() => {
-        swSeconds++;
-        updateStopwatch();
-      }, 1000);
-    }
-    function stopStopwatch() {
-      clearInterval(swInterval);
-      swInterval = null;
-    }
-    function resetStopwatch() {
-      stopStopwatch();
-      swSeconds = 0;
-      updateStopwatch();
-    }
-
-    // Timer
-    let timerInterval, timerSeconds = 0;
-    function startTimer() {
-      timerSeconds = parseInt(document.getElementById("timerInput").value);
-      if (isNaN(timerSeconds) || timerSeconds <= 0) return;
-      updateTimer();
-      timerInterval = setInterval(() => {
-        timerSeconds--;
-        updateTimer();
-        if (timerSeconds <= 0) {
-          clearInterval(timerInterval);
-          playBeep();
-          alert("⏳ Timer Done!");
-        }
-      }, 1000);
-    }
-
-    function updateTimer() {
-      let mins = Math.floor(timerSeconds / 60);
-      let secs = timerSeconds % 60;
-      document.getElementById("timerDisplay").textContent =
-        `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
-    }
-
-    // Beep Sound
-    function playBeep() {
-      const beep = document.getElementById("beep");
-      beep.currentTime = 0;
-      beep.play();
-    }
-
-    // Theme Toggle with Label Switch
-    function toggleTheme() {
-      const body = document.body;
-      const btn = document.getElementById("themeToggle");
-
-      body.classList.toggle("dark-mode");
-
-      if (body.classList.contains("dark-mode")) {
-        btn.textContent = "☀️ Light Mode";
-      } else {
-        btn.textContent = "🌙 Dark Mode";
-      }
-    }
-  </script>
+  <script src="script.js"></script>
 
 </body>
 </html>
+
+
 
